Sites/Site/objects/CVJA__c.object
<CustomObject>
    <fields>
        <fullName>CV__c</fullName>
        <label>CV</label>
        <referenceTo>CV__c</referenceTo>
        <relationshipLabel>CVJAs</relationshipLabel>
        <relationshipName>CVJAs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <required>true</required>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Job_Advertisement__c</fullName>
        <label>Job Advertisement</label>
        <referenceTo>Job_Advertisement__c</referenceTo>
        <relationshipLabel>CVJAs</relationshipLabel>
        <relationshipName>CVJAs</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>CVJA</label>
    <nameField>
        <label>CVJobAdvertisement Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CVJAs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>